--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -106,7 +106,7 @@ nav {
     transition: 0.32s ease-in-out;
 
     &.scrolled {
-      padding: 0px 0;
+      padding: 0 0;
       background-color: #121212;
     }
 
@@ -251,7 +251,7 @@ span.navbar-text {
 
   &::before {
     content: "";
-    width: 0%;
+    width: 0;
     height: 100%;
     position: absolute;
     background-color: #fff;
